[package]
name = "tga565to888"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"]}
tinytga = "0.5.0"
nom = { version = "7.1.1", default-features = false }
png = "0.17.16"
regex = "1.11.1"
walkdir = "2.5.0"
anyhow = "1.0.99"